# na

./: .envrc.example  Cargo.toml  README.md  docker-compose.yml
config/: default.toml
migrations/2024-05-13-121650_create_users/: up.sql
src/: config.rs  errors.rs  handlers.rs  lib.rs  main.rs  models.rs  schema.rs
src/handlers/: auth.rs  mod.rs  user.rs  users.rs
src/middleware/: jwt.rs  mod.rs
tests/: common.rs  list_users.rs  token_create.rs  user_register.rs
