[package]
name = "na"
version = "0.1.0"
edition = "2021"

[lib]
name = "na"
path = "src/lib.rs"

[[bin]]
name = "na"
path = "src/main.rs"

[dependencies]
config = "0.14"
env_logger = "0.11"
log = "0.4"
actix-web = "4.5"
diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
actix-rt = "2.9"
r2d2 = "0.8"
chrono = { version = "0.4", features = ["serde"] }
argon2 = { version = "0.5", features = ["std"] }
thiserror = "1.0"
jsonwebtoken = "9.3"
futures-util = "0.3.30"
rand = "0.8"

[dev-dependencies]
actix-http = "3.6"
serde_json = "1.0"
serial_test = "3.1"
